src/uing/lib_ui/lib_ui.cr


    fun load_control_font = uiLoadControlFont(f : Pointer(FontDescriptor))
    fun free_font_descriptor = uiFreeFontDescriptor(desc : Pointer(FontDescriptor))
    alias DrawTextLayout = Void

    fun draw_new_text_layout = uiDrawNewTextLayout(params : Pointer(DrawTextLayoutParams)) : Pointer(DrawTextLayout)
    fun draw_free_text_layout = uiDrawFreeTextLayout(tl : Pointer(DrawTextLayout))
    fun draw_text = uiDrawText(c : Pointer(DrawContext), tl : Pointer(DrawTextLayout), x : LibC::Double, y : LibC::Double)
    fun draw_text_layout_extents = uiDrawTextLayoutExtents(tl : Pointer(DrawTextLayout), width : Pointer(LibC::Double), height : Pointer(LibC::Double))
    alias FontButton = Void
    fun font_button_font = uiFontButtonFont(b : Pointer(FontButton), desc : Pointer(FontDescriptor))
    fun font_button_on_changed = uiFontButtonOnChanged(b : Pointer(FontButton), f : (Pointer(FontButton), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_font_button = uiNewFontButton : Pointer(FontButton)
    fun free_font_button_font = uiFreeFontButtonFont(desc : Pointer(FontDescriptor))
    alias ColorButton = Void
    fun color_button_color = uiColorButtonColor(b : Pointer(ColorButton), r : Pointer(LibC::Double), g : Pointer(LibC::Double), bl : Pointer(LibC::Double), a : Pointer(LibC::Double))
    fun color_button_set_color = uiColorButtonSetColor(b : Pointer(ColorButton), r : LibC::Double, g : LibC::Double, bl : LibC::Double, a : LibC::Double)
    fun color_button_on_changed = uiColorButtonOnChanged(b : Pointer(ColorButton), f : (Pointer(ColorButton), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_color_button = uiNewColorButton : Pointer(ColorButton)
    alias Form = Void
    fun form_append = uiFormAppend(f : Pointer(Form), label : Pointer(LibC::Char), c : Pointer(Control), stretchy : LibC::Int)
    fun form_num_children = uiFormNumChildren(f : Pointer(Form)) : LibC::Int
    fun form_delete = uiFormDelete(f : Pointer(Form), index : LibC::Int)
    fun form_padded = uiFormPadded(f : Pointer(Form)) : Bool
    fun form_set_padded = uiFormSetPadded(f : Pointer(Form), padded : Bool)
    fun new_form = uiNewForm : Pointer(Form)

    alias Grid = Void
    fun grid_append = uiGridAppend(g : Pointer(Grid), c : Pointer(Control), left : LibC::Int, top : LibC::Int, xspan : LibC::Int, yspan : LibC::Int, hexpand : LibC::Int, halign : Align, vexpand : LibC::Int, valign : Align)
    fun grid_insert_at = uiGridInsertAt(g : Pointer(Grid), c : Pointer(Control), existing : Pointer(Control), at : At, xspan : LibC::Int, yspan : LibC::Int, hexpand : LibC::Int, halign : Align, vexpand : LibC::Int, valign : Align)
    fun grid_padded = uiGridPadded(g : Pointer(Grid)) : Bool
    fun grid_set_padded = uiGridSetPadded(g : Pointer(Grid), padded : Bool)
    fun new_grid = uiNewGrid : Pointer(Grid)
    alias Image = Void
    fun new_image = uiNewImage(width : LibC::Double, height : LibC::Double) : Pointer(Image)
    fun free_image = uiFreeImage(i : Pointer(Image))
    fun image_append = uiImageAppend(i : Pointer(Image), pixels : Pointer(Void), pixel_width : LibC::Int, pixel_height : LibC::Int, byte_stride : LibC::Int)

    alias TableValue = Void
    fun free_table_value = uiFreeTableValue(v : Pointer(TableValue))
    fun table_value_get_type = uiTableValueGetType(v : Pointer(TableValue)) : TableValueType
    fun new_table_value_string = uiNewTableValueString(str : Pointer(LibC::Char)) : Pointer(TableValue)
    fun table_value_string = uiTableValueString(v : Pointer(TableValue)) : Pointer(LibC::Char)
    fun new_table_value_image = uiNewTableValueImage(img : Pointer(Image)) : Pointer(TableValue)
    fun table_value_image = uiTableValueImage(v : Pointer(TableValue)) : Pointer(Image)
    fun new_table_value_int = uiNewTableValueInt(i : LibC::Int) : Pointer(TableValue)
    fun table_value_int = uiTableValueInt(v : Pointer(TableValue)) : LibC::Int
    fun new_table_value_color = uiNewTableValueColor(r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(TableValue)
    fun table_value_color = uiTableValueColor(v : Pointer(TableValue), r : Pointer(LibC::Double), g : Pointer(LibC::Double), b : Pointer(LibC::Double), a : Pointer(LibC::Double))
    alias TableModel = Void

    fun new_table_model = uiNewTableModel(mh : Pointer(TableModelHandler)) : Pointer(TableModel)
    fun free_table_model = uiFreeTableModel(m : Pointer(TableModel))
    fun table_model_row_inserted = uiTableModelRowInserted(m : Pointer(TableModel), new_index : LibC::Int)
    fun table_model_row_changed = uiTableModelRowChanged(m : Pointer(TableModel), index : LibC::Int)
    fun table_model_row_deleted = uiTableModelRowDeleted(m : Pointer(TableModel), old_index : LibC::Int)

    alias Table = Void
    fun table_append_text_column = uiTableAppendTextColumn(t : Pointer(Table), name : Pointer(LibC::Char), text_model_column : LibC::Int, text_editable_model_column : LibC::Int, text_params : Pointer(TableTextColumnOptionalParams))
    fun table_append_image_column = uiTableAppendImageColumn(t : Pointer(Table), name : Pointer(LibC::Char), image_model_column : LibC::Int)
    fun table_append_image_text_column = uiTableAppendImageTextColumn(t : Pointer(Table), name : Pointer(LibC::Char), image_model_column : LibC::Int, text_model_column : LibC::Int, text_editable_model_column : LibC::Int, text_params : Pointer(TableTextColumnOptionalParams))
    fun table_append_checkbox_column = uiTableAppendCheckboxColumn(t : Pointer(Table), name : Pointer(LibC::Char), checkbox_model_column : LibC::Int, checkbox_editable_model_column : LibC::Int)
    fun table_append_checkbox_text_column = uiTableAppendCheckboxTextColumn(t : Pointer(Table), name : Pointer(LibC::Char), checkbox_model_column : LibC::Int, checkbox_editable_model_column : LibC::Int, text_model_column : LibC::Int, text_editable_model_column : LibC::Int, text_params : Pointer(TableTextColumnOptionalParams))
    fun table_append_progress_bar_column = uiTableAppendProgressBarColumn(t : Pointer(Table), name : Pointer(LibC::Char), progress_model_column : LibC::Int)
    fun table_append_button_column = uiTableAppendButtonColumn(t : Pointer(Table), name : Pointer(LibC::Char), button_model_column : LibC::Int, button_clickable_model_column : LibC::Int)
    fun table_header_visible = uiTableHeaderVisible(t : Pointer(Table)) : Bool
    fun table_header_set_visible = uiTableHeaderSetVisible(t : Pointer(Table), visible : Bool)
    fun new_table = uiNewTable(params : Pointer(TableParams)) : Pointer(Table)
    fun table_on_row_clicked = uiTableOnRowClicked(t : Pointer(Table), f : (Pointer(Table), LibC::Int, Pointer(Void) -> Void), data : Pointer(Void))
    fun table_on_row_double_clicked = uiTableOnRowDoubleClicked(t : Pointer(Table), f : (Pointer(Table), LibC::Int, Pointer(Void) -> Void), data : Pointer(Void))
    fun table_header_set_sort_indicator = uiTableHeaderSetSortIndicator(t : Pointer(Table), column : LibC::Int, indicator : SortIndicator)
    fun table_header_sort_indicator = uiTableHeaderSortIndicator(t : Pointer(Table), column : LibC::Int) : SortIndicator
    fun table_header_on_clicked = uiTableHeaderOnClicked(t : Pointer(Table), f : (Pointer(Table), LibC::Int, Pointer(Void) -> Void), data : Pointer(Void))
    fun table_column_width = uiTableColumnWidth(t : Pointer(Table), column : LibC::Int) : LibC::Int
    fun table_column_set_width = uiTableColumnSetWidth(t : Pointer(Table), column : LibC::Int, width : LibC::Int)

    fun table_get_selection_mode = uiTableGetSelectionMode(t : Pointer(Table))
    fun table_set_selection_mode = uiTableSetSelectionMode(t : Pointer(Table), mode : TableSelectionMode)
    fun table_on_selection_changed = uiTableOnSelectionChanged(t : Pointer(Table), f : (Pointer(Table), Pointer(Void) -> Void), data : Pointer(Void))

    fun table_get_selection = uiTableGetSelection(t : Pointer(Table)) : Pointer(TableSelection)
    fun table_set_selection = uiTableSetSelection(t : Pointer(Table), sel : Pointer(TableSelection))
    fun free_table_selection = uiFreeTableSelection(s : Pointer(TableSelection))
  end
end
